# nanobot-1

./: .gitignore  README.md  pyproject.toml
docs/: team-agent-setup.md
nanobot/agent/: context.py  loop.py  memory.py  routing.py
nanobot/agent/tools/: cron.py  message.py  slack_tools.py  spawn.py
nanobot/bus/: events.py
nanobot/channels/: base.py  teams.py
nanobot/cli/: commands.py
nanobot/config/: loader.py  schema.py  secret_resolver.py
nanobot/presets/: __init__.py  base.py  registry.py
nanobot/session/: manager.py
nanobot/templates/team-agent/dev-engineer/: SOUL.md
nanobot/templates/team-agent/dev-lead/: SOUL.md
nanobot/templates/team-agent/general/: SOUL.md
nanobot/templates/team-agent/product-manager/: SOUL.md
nanobot/templates/team-agent/tpm/: SOUL.md
presets/nvidia/: pyproject.toml
presets/nvidia/nanobot_preset_nvidia/: __init__.py  preset.py
tests/: test_config_migration.py  test_secret_resolver.py
tests/tools/: test_message_tool.py  test_message_tool_suppress.py
